After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708326 - x264enc caps negotiation broken, tries input 4:4:4 for non-4:4:4 profiles
x264enc caps negotiation broken, tries input 4:4:4 for non-4:4:4 profiles
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other All
: Normal blocker
: 1.1.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-18 20:16 UTC by Olivier Crête
Modified: 2013-09-18 23:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Olivier Crête 2013-09-18 20:16:31 UTC
The x264enc getcaps function should probably filter out 4:4:4 YUV formats if the downstream caps don't support a 4:4:4 profile.

gst-launch-1.0 -v  videotestsrc ! video/x-raw, format=BGRA ! videoconvert ! 
x264enc ! video/x-h264, profile=main ! fakesink

This is a regression from 1.0, probably introduced when 4:4:4 support was added.
Comment 1 Olivier Crête 2013-09-18 23:33:49 UTC
Fixed

commit b82703170abde46dcd62fe12e8aed626c2a012e7
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Wed Sep 18 19:13:45 2013 -0400

    x264enc: Implement getcaps that restricts the input format depending on the output profile
    
    Also add some x264enc profile tests
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708326