x264enc: Implement getcaps that restricts the input format depending on the output profile

Also add some x264enc profile tests

https://bugzilla.gnome.org/show_bug.cgi?id=708326